Emphasize journal names in notes

--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -4,6 +4,7 @@
   EPRINT = {2207.05154v1},
   EPRINTCLASS = {physics.atom-ph},
   EPRINTTYPE = {arXiv},
+  NOTE = {Accepted for publication in \emph{Physical Review A}},
   TITLE = {{Thomas--Reiche--Kuhn Correction for Truncated Configuration Interaction Spaces: Case of Laser-Assisted Dynamical Interference}},
 }
 
