Links to PDFs and copy DOI

--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -1,7 +1,7 @@
 @ONLINE{Bertolino2022,
   AUTHOR = {Bertolino, Mattias and Carlström, Stefanos and Peschel, Jasper and Zapata, Felipe and Lindroth, Eva and Dahlström, Jan Marcus},
   DATE = {2022},
-  EPRINT = {2207.05154v1},
+  EPRINT = {2207.05154},
   EPRINTCLASS = {physics.atom-ph},
   EPRINTTYPE = {arXiv},
   NOTE = {Accepted for publication in \emph{Physical Review A}},
@@ -15,6 +15,7 @@
   PUBLISHER = {Lund University (Media-Tryck)},
   URL = {https://lup.lub.lu.se/search/publication/3efc40a6-0524-459e-ade4-caa048df1307},
   DATE = {2016},
+  FILE = {https://lup.lub.lu.se/search/files/18894775/thesis_lu.pdf},
   ISBN = {978-91-7753-116-6},
   PAGES = {246},
   TITLE = {Sub-Cycle Control of Strong-Field Processes on the Attosecond Timescale},
@@ -50,6 +51,7 @@
   URL = {http://dx.doi.org/10.1088/1361-6455/aa96e7},
   DATE = {2018},
   DOI = {10.1088/1361-6455/aa96e7},
+  FILE = {https://iopscience.iop.org/article/10.1088/1361-6455/aa96e7/pdf},
   ISSN = {1361-6455},
   JOURNAL = {Journal of Physics B: Atomic, Molecular and Optical Physics},
   NUMBER = {1},
@@ -73,7 +75,7 @@
   URL = {http://dx.doi.org/10.1088/1367-2630/aa511f},
   DATE = {2016-12},
   DOI = {10.1088/1367-2630/aa511f},
-  FILE = {:Carlstroem2016.pdf:PDF},
+  FILE = {http://iopscience.iop.org/article/10.1088/1367-2630/aa511f/pdf},
   JOURNAL = {New Journal of Physics},
   NUMBER = {12},
   PAGES = {123032},
@@ -86,6 +88,7 @@
   URL = {http://dx.doi.org/10.1073/pnas.1921138117},
   DATE = {2020},
   DOI = {10.1073/pnas.1921138117},
+  FILE = {https://www.pnas.org/doi/epdf/10.1073/pnas.1921138117},
   JOURNAL = {Proceedings of the National Academy of Sciences},
   NUMBER = {20},
   PAGES = {10727--10732},
@@ -99,6 +102,7 @@
   URL = {http://dx.doi.org/10.1088/1361-6455/aa9953},
   DATE = {2018-01},
   DOI = {10.1088/1361-6455/aa9953},
+  FILE = {https://iopscience.iop.org/article/10.1088/1361-6455/aa9953/pdf},
   ISSN = {1361-6455},
   JOURNAL = {Journal of Physics B: Atomic, Molecular and Optical Physics},
   NUMBER = {3},
@@ -112,6 +116,7 @@
   URL = {https://doi.org/10.1088/2515-7647/ac483a},
   DATE = {2022},
   DOI = {10.1088/2515-7647/ac483a},
+  FILE = {https://iopscience.iop.org/article/10.1088/2515-7647/ac483a/pdf},
   JOURNAL = {Journal of Physics: Photonics},
   NUMBER = {1},
   PAGES = {014002},
@@ -125,7 +130,7 @@
   URL = {http://dx.doi.org/10.1088/1367-2630/16/5/052001},
   DATE = {2014-05},
   DOI = {10.1088/1367-2630/16/5/052001},
-  FILE = {:Heyl2014.pdf:PDF},
+  FILE = {http://iopscience.iop.org/article/10.1088/1367-2630/16/5/052001/pdf},
   JOURNAL = {New Journal of Physics},
   NUMBER = {5},
   PAGES = {052001},
@@ -138,7 +143,7 @@
   URL = {http://www.nature.com/articles/srep39006},
   DATE = {2016},
   DOI = {10.1038/srep39006},
-  FILE = {:Larsen2016.pdf:PDF},
+  FILE = {https://www.nature.com/articles/srep39006.pdf},
   JOURNAL = {Scientific Reports},
   PAGES = {39006},
   TITLE = {Sub-cycle ionization dynamics revealed by trajectory resolved, elliptically-driven high-order harmonic generation},
@@ -151,7 +156,7 @@
   URL = {http://dx.doi.org/10.1063/1.4902819},
   DATE = {2014-12},
   DOI = {10.1063/1.4902819},
-  FILE = {Published version:Lorek2014RoSI.pdf:PDF},
+  FILE = {http://aip.scitation.org/doi/pdf/10.1063/1.4902819},
   ISSN = {1089-7623},
   JOURNAL = {Review of Scientific Instruments},
   NUMBER = {12},
@@ -165,6 +170,7 @@
   URL = {http://dx.doi.org/10.1038/s41586-022-04948-y},
   DATE = {2022},
   DOI = {10.1038/s41586-022-04948-y},
+  FILE = {https://www.nature.com/articles/s41586-022-04948-y.pdf},
   JOURNAL = {Nature},
   NUMBER = {7923},
   PAGES = {488--493},
@@ -177,6 +183,7 @@
   URL = {https://doi.org/10.1088/1361-6455/ac1ae4},
   DATE = {2021},
   DOI = {10.1088/1361-6455/ac1ae4},
+  FILE = {https://iopscience.iop.org/article/10.1088/1361-6455/ac1ae4/pdf},
   JOURNAL = {Journal of Physics B: Atomic, Molecular and Optical Physics},
   NUMBER = {15},
   PAGES = {154002},
@@ -190,7 +197,7 @@
   URL = {http://dx.doi.org/10.1088/0953-4075/49/9/095002},
   DATE = {2016-04},
   DOI = {10.1088/0953-4075/49/9/095002},
-  FILE = {:Petersson2016.pdf:PDF},
+  FILE = {https://arxiv.org/pdf/1601.07876.pdf},
   JOURNAL = {Journal of Physics B: Atomic, Molecular and Optical Physics},
   NUMBER = {9},
   PAGES = {095002},
@@ -201,7 +208,7 @@
 @UNPUBLISHED{Weissenbilder2022,
   AUTHOR = {Weissenbilder, Robin and Carlström, Stefanos and Rego, Laura and Guo, Chen and Heyl, Christoph Michael and Smorenburg, Peter and Constant, Eric and Arnold, Cord Louis and L'Huillier, Anne},
   DATE = {2022},
-  EPRINT = {2202.08202v1},
+  EPRINT = {2202.08202},
   EPRINTCLASS = {physics.optics},
   EPRINTTYPE = {arXiv},
   NOTE = {Accepted for publication in \emph{Nature Review Physics}},
@@ -213,6 +220,7 @@
   URL = {https://doi.org/10.1073/pnas.1817626116},
   DATE = {2019},
   DOI = {10.1073/pnas.1817626116},
+  FILE = {https://www.pnas.org/doi/epdf/10.1073/pnas.1817626116},
   JOURNAL = {Proceedings of the National Academy of Sciences},
   NUMBER = {11},
   PAGES = {4779--4787},
