--- a/bibliography/papers.tex
+++ b/bibliography/papers.tex
@@ -18,4 +18,6 @@ style=numeric,
 
 \cite{Lorek2014RoSI,Petersson2016,Heyl2014,Larsen2016,Carlstroem2016,Carlstroem2018,Carlstroem2016a,Guo2018,Carlstroem2022tdcisI,Carlstroem2022tdcisII,Carlstroem2022coherence,Weissenbilder2022,Nandi2022,Wikmark2019,Olofsson2021,Heyl2022,Cheng2020,Bertolino2022}
 
+\printbibliography
+
 \end{document}
