Added conference images

--- a/content/conferences/2015 EGAS47.md
+++ b/content/conferences/2015 EGAS47.md
@@ -6,4 +6,5 @@ location = "Riga, Latvia"
 enddate = 2014-07-17
 url = "http://www.egas.lu.lv/"
 talk = "Quantum Path Interferometry using Chirped High-order Harmonic Generation"
+image = "2015-riga.jpg"
 +++
