--- a/content/conferences/2022 GRC.md
+++ b/content/conferences/2022 GRC.md
@@ -6,4 +6,5 @@ location = "Rhode Island, USA"
 enddate = 2022-06-17
 url = "https://www.grc.org/multiphoton-processes-conference/2022/"
 poster = "Dynamic Symmetry-Breaking in Above-Threshold Ionization Using a Rydberg Atomic Antenna: Ionic Coherences and Spin-Polarized Photoelectrons"
+image = "2022-RI-capitol.jpg"
 +++
