--- a/content/conferences/2022 CMQT.md
+++ b/content/conferences/2022 CMQT.md
@@ -6,4 +6,5 @@ location = "Bath, UK"
 enddate = 2022-08-05
 url = "https://www.pranavsingh.co.uk/cmqt22"
 invited_talk = "Time-Dependent Configuration-Interaction Singles, or the Lowest-Rank Approach to Multielectron Quantum Dynamics"
+image = "2022-stonehenge.jpg"
 +++
