Added some more pictures

--- a/content/conferences/2016 ECAMP12.md
+++ b/content/conferences/2016 ECAMP12.md
@@ -6,4 +6,5 @@ location = "Frankfurt am Main, Germany"
 enddate = 2016-09-09
 url = "http://www.ecamp.uni-frankfurt.de/"
 poster = "Intratrajectory Interference in High-order Harmonic Generation"
+image = "2016-frankfurt.jpg"
 +++
