--- a/content/conferences/2019 ATTO7.md
+++ b/content/conferences/2019 ATTO7.md
@@ -6,4 +6,5 @@ location = "Szeged, Hungary"
 enddate = 2019-07-05
 url = "https://www.eli-alps.hu/atto2019/"
 poster = "Time-Resolved Exchange Interaction in Noble Gas Ionization"
+image = "2019-szeged.jpg"
 +++
