--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -66,6 +66,7 @@
   EPRINT = {2204.14082},
   EPRINTCLASS = {physics.atom-ph},
   EPRINTTYPE = {arXiv},
+  NOTE = {Accepted for publication in \emph{Physical Review A}},
   TITLE = {{Rydberg Atomic Antenna in Strongly Driven Multi-Electron Atoms}},
 }
 
