TD-CIS articles published!

--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -22,26 +22,39 @@
   TYPE = {phdthesis},
 }
 
-@UNPUBLISHED{Carlstroem2022tdcisI,
+@ARTICLE{Carlstroem2022tdcisI,
   AUTHOR = {Carlström, Stefanos and Spanner, Michael and Patchkovskii, Serguei},
+  PUBLISHER = {American Physical Society},
   URL = {https://arxiv.org/abs/2204.09966},
-  DATE = {2022},
+  DATE = {2022-10},
+  DOI = {10.1103/PhysRevA.106.043104},
   EPRINT = {2204.09966},
   EPRINTCLASS = {physics.chem-ph},
   EPRINTTYPE = {arXiv},
-  NOTE = {Accepted for publication in \emph{Physical Review A}},
-  TITLE = {General Time-Dependent Configuration-Interaction Singles {I}: The Molecular Case},
+  FILE = {https://journals.aps.org/pra/pdf/10.1103/PhysRevA.106.043104},
+  JOURNAL = {Physical Review A},
+  NOTE = {Editors' Suggestion},
+  NUMBER = {4},
+  PAGES = {043104},
+  TITLE = {General time-dependent configuration-interaction singles. {I}. Molecular case},
+  VOLUME = {106},
 }
 
-@UNPUBLISHED{Carlstroem2022tdcisII,
+@ARTICLE{Carlstroem2022tdcisII,
   AUTHOR = {Carlström, Stefanos and Bertolino, Mattias and Dahlström, Jan Marcus and Patchkovskii, Serguei},
+  PUBLISHER = {American Physical Society ({APS})},
   URL = {https://arxiv.org/abs/2204.10534},
-  DATE = {2022},
+  DATE = {2022-10},
+  DOI = {10.1103/PhysRevA.106.042806},
   EPRINT = {2204.10534},
   EPRINTCLASS = {physics.atom-ph},
   EPRINTTYPE = {arXiv},
-  NOTE = {Accepted for publication in \emph{Physical Review A}},
-  TITLE = {General Time-Dependent Configuration-Interaction Singles {II}: The Atomic Case},
+  FILE = {https://journals.aps.org/pra/pdf/10.1103/PhysRevA.106.042806},
+  JOURNAL = {Physical Review A},
+  NUMBER = {4},
+  PAGES = {042806},
+  TITLE = {General time-dependent configuration-interaction singles. {II}. Atomic case},
+  VOLUME = {106},
 }
 
 @ARTICLE{Carlstroem2018,
