--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -1,11 +1,17 @@
-@ONLINE{Bertolino2022,
+@ARTICLE{Bertolino2022,
   AUTHOR = {Bertolino, Mattias and Carlström, Stefanos and Peschel, Jasper and Zapata, Felipe and Lindroth, Eva and Dahlström, Jan Marcus},
-  DATE = {2022},
+  URL = {http://dx.doi.org/10.1103/PhysRevA.106.043108},
+  DATE = {2022-10},
+  DOI = {10.1103/physreva.106.043108},
   EPRINT = {2207.05154},
   EPRINTCLASS = {physics.atom-ph},
   EPRINTTYPE = {arXiv},
-  NOTE = {Accepted for publication in \emph{Physical Review A}},
-  TITLE = {{Thomas--Reiche--Kuhn Correction for Truncated Configuration Interaction Spaces: Case of Laser-Assisted Dynamical Interference}},
+  FILE = {https://journals.aps.org/pra/pdf/10.1103/PhysRevA.106.043108},
+  JOURNAL = {Physical Review A},
+  NUMBER = {4},
+  PAGES = {043108},
+  TITLE = {Thomas--Reiche--Kuhn Correction for Truncated Configuration-Interaction Spaces: Case of Laser-Assisted Dynamical Interference},
+  VOLUME = {106},
 }
 
 @THESIS{Carlstroem2016a,
@@ -36,7 +42,7 @@
   NOTE = {Editors' Suggestion},
   NUMBER = {4},
   PAGES = {043104},
-  TITLE = {General time-dependent configuration-interaction singles. {I}. Molecular case},
+  TITLE = {General time-dependent configuration-interaction singles. {I}. {M}olecular case},
   VOLUME = {106},
 }
 
@@ -53,7 +59,7 @@
   JOURNAL = {Physical Review A},
   NUMBER = {4},
   PAGES = {042806},
-  TITLE = {General time-dependent configuration-interaction singles. {II}. Atomic case},
+  TITLE = {General time-dependent configuration-interaction singles. {II}. {A}tomic case},
   VOLUME = {106},
 }
 
