--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -225,14 +225,16 @@
   VOLUME = {49},
 }
 
-@UNPUBLISHED{Weissenbilder2022,
+@ARTICLE{Weissenbilder2022,
   AUTHOR = {Weissenbilder, Robin and Carlström, Stefanos and Rego, Laura and Guo, Chen and Heyl, Christoph Michael and Smorenburg, Peter and Constant, Eric and Arnold, Cord Louis and L'Huillier, Anne},
   DATE = {2022},
+  DOI = {10.1038/s42254-022-00522-7},
   EPRINT = {2202.08202},
   EPRINTCLASS = {physics.optics},
   EPRINTTYPE = {arXiv},
-  NOTE = {Accepted for publication in \emph{Nature Review Physics}},
-  TITLE = {{Efficient generation of high-order harmonics in gases}},
+  JOURNAL = {Nature Reviews Physics},
+  NOTE = {Expert Recommendation},
+  TITLE = {How To Optimize High-Order Harmonic Generation in Gases},
 }
 
 @ARTICLE{Wikmark2019,
