Coherence paper published!

--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -1,7 +1,6 @@
 @ARTICLE{Bertolino2022,
   AUTHOR = {Bertolino, Mattias and Carlström, Stefanos and Peschel, Jasper and Zapata, Felipe and Lindroth, Eva and Dahlström, Jan Marcus},
-  URL = {http://dx.doi.org/10.1103/PhysRevA.106.043108},
-  DATE = {2022-10},
+  DATE = {2022-10-14},
   DOI = {10.1103/physreva.106.043108},
   EPRINT = {2207.05154},
   EPRINTCLASS = {physics.atom-ph},
@@ -32,7 +31,7 @@
   AUTHOR = {Carlström, Stefanos and Spanner, Michael and Patchkovskii, Serguei},
   PUBLISHER = {American Physical Society},
   URL = {https://arxiv.org/abs/2204.09966},
-  DATE = {2022-10},
+  DATE = {2022-10-10},
   DOI = {10.1103/PhysRevA.106.043104},
   EPRINT = {2204.09966},
   EPRINTCLASS = {physics.chem-ph},
@@ -50,7 +49,7 @@
   AUTHOR = {Carlström, Stefanos and Bertolino, Mattias and Dahlström, Jan Marcus and Patchkovskii, Serguei},
   PUBLISHER = {American Physical Society ({APS})},
   URL = {https://arxiv.org/abs/2204.10534},
-  DATE = {2022-10},
+  DATE = {2022-10-10},
   DOI = {10.1103/PhysRevA.106.042806},
   EPRINT = {2204.10534},
   EPRINTCLASS = {physics.atom-ph},
@@ -79,14 +78,17 @@
   VOLUME = {51},
 }
 
-@UNPUBLISHED{Carlstroem2022coherence,
+@ARTICLE{Carlstroem2022coherence,
   AUTHOR = {Carlström, Stefanos and Dahlström, Jan Marcus and Ivanov, Misha Yu and Patchkovskii, Serguei},
-  DATE = {2022},
+  DATE = {2022-10-24},
+  DOI = {10.1103/physreva.106.043114},
   EPRINT = {2204.14082},
   EPRINTCLASS = {physics.atom-ph},
   EPRINTTYPE = {arXiv},
-  NOTE = {Accepted for publication in \emph{Physical Review A}},
-  TITLE = {{Rydberg Atomic Antenna in Strongly Driven Multi-Electron Atoms}},
+  JOURNAL = {Physical Review A},
+  NUMBER = {4},
+  TITLE = {Rydberg Atomic Antenna in Strongly Driven Multielectron Atoms},
+  VOLUME = {106},
 }
 
 @ARTICLE{Carlstroem2016,
@@ -134,7 +136,7 @@
 @ARTICLE{Heyl2022,
   AUTHOR = {Heyl, Christoph Michael and Seidel, Marcus and Escoto, Esmerando and Schönberg, Arthur and Carlström, Stefanos and Arisholm, Gunnar and Lang, Tino and Hartl, Ingmar},
   URL = {https://doi.org/10.1088/2515-7647/ac483a},
-  DATE = {2022},
+  DATE = {2022-01-24},
   DOI = {10.1088/2515-7647/ac483a},
   FILE = {https://iopscience.iop.org/article/10.1088/2515-7647/ac483a/pdf},
   JOURNAL = {Journal of Physics: Photonics},
@@ -188,7 +190,7 @@
 @ARTICLE{Nandi2022,
   AUTHOR = {Nandi, Saikat and Olofsson, Edvin and Bertolino, Mattias and Carlström, Stefanos and Zapata, Felipe and Busto, David and Callegari, Carlo and Fraia, Michele Di and Eng-Johnsson, Per and Feifel, Raimund and Gallician, Guillaume and Gisselbrecht, Mathieu and Maclot, Sylvain and Neoričić, Lana and Peschel, Jasper and Plekan, Oksana and Prince, Kevin C. and Squibb, Richard J. and Zhong, Shiyang and Demekhin, Philipp V. and Meyer, Michael and Miron, Catalin and Badano, Laura and Danailov, Miltcho B. and Giannessi, Luca and Manfredda, Michele and Sottocorona, Filippo and Zangrando, Marco and Dahlström, Jan Marcus},
   URL = {http://dx.doi.org/10.1038/s41586-022-04948-y},
-  DATE = {2022},
+  DATE = {2022-08-17},
   DOI = {10.1038/s41586-022-04948-y},
   FILE = {https://www.nature.com/articles/s41586-022-04948-y.pdf},
   JOURNAL = {Nature},
@@ -227,7 +229,7 @@
 
 @ARTICLE{Weissenbilder2022,
   AUTHOR = {Weissenbilder, Robin and Carlström, Stefanos and Rego, Laura and Guo, Chen and Heyl, Christoph Michael and Smorenburg, Peter and Constant, Eric and Arnold, Cord Louis and L'Huillier, Anne},
-  DATE = {2022},
+  DATE = {2022-10-13},
   DOI = {10.1038/s42254-022-00522-7},
   EPRINT = {2202.08202},
   EPRINTCLASS = {physics.optics},
