--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -81,12 +81,14 @@
 @ARTICLE{Carlstroem2022coherence,
   AUTHOR = {Carlström, Stefanos and Dahlström, Jan Marcus and Ivanov, Misha Yu and Patchkovskii, Serguei},
   DATE = {2022-10-24},
-  DOI = {10.1103/physreva.106.043114},
+  DOI = {10.1103/PhysRevA.106.043114},
   EPRINT = {2204.14082},
   EPRINTCLASS = {physics.atom-ph},
   EPRINTTYPE = {arXiv},
+  FILE = {https://journals.aps.org/pra/pdf/10.1103/PhysRevA.106.043114},
   JOURNAL = {Physical Review A},
   NUMBER = {4},
+  PAGES = {043114},
   TITLE = {Rydberg Atomic Antenna in Strongly Driven Multielectron Atoms},
   VOLUME = {106},
 }
