Added spin polarization manuscripts

--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -45,6 +45,18 @@
   VOLUME = {106},
 }
 
+@MISC{Carlstroem2023linspinpol,
+  AUTHOR = {Carlström, Stefanos and Dahlström, Jan Marcus and Ivanov, Misha Yu and Smirnova, Olga and Patchkovskii, Serguei},
+  URL = {http://arxiv.org/abs/2306.12823},
+  DATE = {2023},
+  DOI = {10.48550/arXiv.2306.12823},
+  EPRINT = {2306.12823},
+  EPRINTCLASS = {physics.atom-ph},
+  EPRINTTYPE = {arXiv},
+  NOTE = {Submitted for review},
+  TITLE = {{Control of Spin Polarization through Recollisions}},
+}
+
 @ARTICLE{Carlstroem2022tdcisII,
   AUTHOR = {Carlström, Stefanos and Bertolino, Mattias and Dahlström, Jan Marcus and Patchkovskii, Serguei},
   PUBLISHER = {American Physical Society ({APS})},
@@ -105,6 +117,18 @@
   PAGES = {123032},
   TITLE = {Spatially and spectrally resolved quantum path interference with chirped driving pulses},
   VOLUME = {18},
+}
+
+@UNPUBLISHED{Carlstroem2023spinpolspectral,
+  AUTHOR = {Carlström, Stefanos and Tahouri, Rezvan and Papoulia, Asimina and Dahlström, Jan Marcus and Ivanov, Misha Yu and Smirnova, Olga and Patchkovskii, Serguei},
+  URL = {http://arxiv.org/abs/2306.15665},
+  DATE = {2023},
+  DOI = {10.48550/arXiv.2306.15665},
+  EPRINT = {2306.15665},
+  EPRINTCLASS = {physics.atom-ph},
+  EPRINTTYPE = {arXiv},
+  NOTE = {Manuscript in preparation},
+  TITLE = {{Spin-Polarized Photoelectrons in the Vicinity of Spectral Features}},
 }
 
 @ARTICLE{Cheng2020,
