Recollisional spin polarization paper published!

--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -45,16 +45,19 @@
   VOLUME = {106},
 }
 
-@MISC{Carlstroem2023linspinpol,
+@ARTICLE{Carlstroem2023linspinpol,
   AUTHOR = {Carlström, Stefanos and Dahlström, Jan Marcus and Ivanov, Misha Yu and Smirnova, Olga and Patchkovskii, Serguei},
-  URL = {http://arxiv.org/abs/2306.12823},
-  DATE = {2023},
-  DOI = {10.48550/arXiv.2306.12823},
+  DATE = {2023-10-06},
+  DOI = {10.1103/PhysRevA.108.043104},
   EPRINT = {2306.12823},
   EPRINTCLASS = {physics.atom-ph},
   EPRINTTYPE = {arXiv},
-  NOTE = {Submitted for review},
+  FILE = {https://journals.aps.org/pra/pdf/10.1103/PhysRevA.108.043104},
+  JOURNAL = {Physical Review A},
+  NUMBER = {4},
+  PAGES = {043104},
   TITLE = {{Control of Spin Polarization through Recollisions}},
+  VOLUME = {108},
 }
 
 @ARTICLE{Carlstroem2022tdcisII,
