Added latest FERMI paper

--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -216,6 +216,22 @@
   VOLUME = {85},
 }
 
+@ARTICLE{Nandi2024,
+  AUTHOR = {Nandi, Saikat and Stenquist, Axel and Papoulia, Asimina and Olofsson, Edvin and Badano, Laura and Bertolino, Mattias and Busto, David and Callegari, Carlo and Carlström, Stefanos and Danailov, Miltcho B. and Demekhin, Philipp V. and Fraia, Michele Di and Eng-Johnsson, Per and Feifel, Raimund and Gallician, Guillaume and Giannessi, Luca and Gisselbrecht, Mathieu and Manfredda, Michele and Meyer, Michael and Miron, Catalin and Peschel, Jasper and Plekan, Oksana and Prince, Kevin C. and Squibb, Richard J. and Zangrando, Marco and Zapata, Felipe and Zhong, Shiyang and Dahlström, Jan Marcus},
+  URL = {http://dx.doi.org/10.1126/sciadv.ado0668},
+  DATE = {2024},
+  DOI = {10.1126/sciadv.ado0668},
+  EPRINT = {2312.04442},
+  EPRINTCLASS = {physics.quant-ph},
+  EPRINTTYPE = {arXiv},
+  FILE = {https://www.science.org/doi/pdf/10.1126/sciadv.ado0668?download=true},
+  JOURNAL = {Science Advances},
+  NUMBER = {16},
+  PAGES = {eado0668},
+  TITLE = {Generation of Entanglement Using a Short-Wavelength Seeded Free-Electron Laser},
+  VOLUME = {10},
+}
+
 @ARTICLE{Nandi2022,
   AUTHOR = {Nandi, Saikat and Olofsson, Edvin and Bertolino, Mattias and Carlström, Stefanos and Zapata, Felipe and Busto, David and Callegari, Carlo and Fraia, Michele Di and Eng-Johnsson, Per and Feifel, Raimund and Gallician, Guillaume and Gisselbrecht, Mathieu and Maclot, Sylvain and Neoričić, Lana and Peschel, Jasper and Plekan, Oksana and Prince, Kevin C. and Squibb, Richard J. and Zhong, Shiyang and Demekhin, Philipp V. and Meyer, Michael and Miron, Catalin and Badano, Laura and Danailov, Miltcho B. and Giannessi, Luca and Manfredda, Michele and Sottocorona, Filippo and Zangrando, Marco and Dahlström, Jan Marcus},
   URL = {http://dx.doi.org/10.1038/s41586-022-04948-y},
