--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -16,7 +16,6 @@
 @THESIS{Carlstroem2016a,
   AUTHOR = {Carlström, Stefanos},
   INSTITUTION = {Lund University},
-  LANGUAGE = {eng},
   PUBLISHER = {Lund University (Media-Tryck)},
   URL = {https://lup.lub.lu.se/search/publication/3efc40a6-0524-459e-ade4-caa048df1307},
   DATE = {2016},
@@ -243,6 +242,19 @@
   PAGES = {488--493},
   TITLE = {Observation of Rabi Dynamics With a Short-Wavelength Free-Electron Laser},
   VOLUME = {608},
+}
+
+@ARTICLE{Nie2024,
+  AUTHOR = {Nie, Zan and Nambu, Noa and Marsh, Kenneth A. and Matteo, Daniel and Patel, C. Kumar and Zhang, Chaojie and Wu, Yipeng and Carlström, Stefanos and Morales, Felipe and Patchkovskii, Serguei and Smirnova, Olga and Ivanov, Misha and Joshi, Chan},
+  URL = {http://dx.doi.org/10.1103/PhysRevLett.133.063201},
+  DATE = {2024},
+  DOI = {10.1103/physrevlett.133.063201},
+  FILE = {https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.133.063201},
+  JOURNAL = {Physical Review Letters},
+  NUMBER = {6},
+  PAGES = {063201},
+  TITLE = {Bidirectional Cascaded Superfluorescent Lasing in Air Enabled By Resonant Third Harmonic Photon Exchange From Nitrogen To Argon},
+  VOLUME = {133},
 }
 
 @ARTICLE{Olofsson2021,
