--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -284,6 +284,19 @@
   VOLUME = {49},
 }
 
+@ARTICLE{Tahouri2024,
+  AUTHOR = {Tahouri, Rezvan and Papoulia, Asimina and Carlström, Stefanos and Zapata, Felipe and Dahlström, Jan Marcus},
+  URL = {http://dx.doi.org/10.1038/s42005-024-01833-0},
+  DATE = {2024},
+  DOI = {10.1038/s42005-024-01833-0},
+  FILE = {https://www.nature.com/articles/s42005-024-01833-0.pdf},
+  JOURNAL = {Communications Physics},
+  NUMBER = {1},
+  PAGES = {344},
+  TITLE = {Relativistic Treatment of Hole Alignment in Noble Gas Atoms},
+  VOLUME = {7},
+}
+
 @ARTICLE{Weissenbilder2022,
   AUTHOR = {Weissenbilder, Robin and Carlström, Stefanos and Rego, Laura and Guo, Chen and Heyl, Christoph Michael and Smorenburg, Peter and Constant, Eric and Arnold, Cord Louis and L'Huillier, Anne},
   DATE = {2022-10-13},
