Spectral spin polarization manuscript accepted!

--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -121,15 +121,15 @@
   VOLUME = {18},
 }
 
-@UNPUBLISHED{Carlstroem2023spinpolspectral,
+@UNPUBLISHED{Carlstroem2025spinpolspectral,
   AUTHOR = {Carlström, Stefanos and Tahouri, Rezvan and Papoulia, Asimina and Dahlström, Jan Marcus and Ivanov, Misha Yu and Smirnova, Olga and Patchkovskii, Serguei},
   URL = {http://arxiv.org/abs/2306.15665},
-  DATE = {2023},
+  DATE = {2025},
   DOI = {10.48550/arXiv.2306.15665},
   EPRINT = {2306.15665},
   EPRINTCLASS = {physics.atom-ph},
   EPRINTTYPE = {arXiv},
-  NOTE = {Manuscript in preparation},
+  NOTE = {Accepted for publication in \emph{Physical Review Letters}},
   TITLE = {{Spin-Polarized Photoelectrons in the Vicinity of Spectral Features}},
 }
 
@@ -236,6 +236,9 @@
   URL = {http://dx.doi.org/10.1038/s41586-022-04948-y},
   DATE = {2022-08-17},
   DOI = {10.1038/s41586-022-04948-y},
+  EPRINT = {2201.10950},
+  EPRINTCLASS = {quant-ph},
+  EPRINTTYPE = {arXiv},
   FILE = {https://www.nature.com/articles/s41586-022-04948-y.pdf},
   JOURNAL = {Nature},
   NUMBER = {7923},
@@ -249,6 +252,9 @@
   URL = {http://dx.doi.org/10.1103/PhysRevLett.133.063201},
   DATE = {2024},
   DOI = {10.1103/physrevlett.133.063201},
+  EPRINT = {2405.04089},
+  EPRINTCLASS = {physics.optics},
+  EPRINTTYPE = {arXiv},
   FILE = {https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.133.063201},
   JOURNAL = {Physical Review Letters},
   NUMBER = {6},
@@ -276,6 +282,9 @@
   URL = {http://dx.doi.org/10.1088/0953-4075/49/9/095002},
   DATE = {2016-04},
   DOI = {10.1088/0953-4075/49/9/095002},
+  EPRINT = {1601.07876},
+  EPRINTCLASS = {physics.atom-ph},
+  EPRINTTYPE = {arXiv},
   FILE = {https://arxiv.org/pdf/1601.07876.pdf},
   JOURNAL = {Journal of Physics B: Atomic, Molecular and Optical Physics},
   NUMBER = {9},
