Spectral spin polarization paper published!

--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -121,16 +121,20 @@
   VOLUME = {18},
 }
 
-@UNPUBLISHED{Carlstroem2025spinpolspectral,
+@ARTICLE{Carlstroem2025,
   AUTHOR = {Carlström, Stefanos and Tahouri, Rezvan and Papoulia, Asimina and Dahlström, Jan Marcus and Ivanov, Misha Yu and Smirnova, Olga and Patchkovskii, Serguei},
-  URL = {http://arxiv.org/abs/2306.15665},
+  URL = {http://dx.doi.org/10.1103/PhysRevLett.134.093202},
   DATE = {2025},
-  DOI = {10.48550/arXiv.2306.15665},
+  DOI = {10.1103/physrevlett.134.093202},
   EPRINT = {2306.15665},
   EPRINTCLASS = {physics.atom-ph},
   EPRINTTYPE = {arXiv},
-  NOTE = {Accepted for publication in \emph{Physical Review Letters}},
-  TITLE = {{Spin-Polarized Photoelectrons in the Vicinity of Spectral Features}},
+  FILE = {https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.134.093202},
+  JOURNAL = {Physical Review Letters},
+  NUMBER = {9},
+  PAGES = {093202},
+  TITLE = {Spin-Polarized Photoelectrons in the Vicinity of Spectral Features},
+  VOLUME = {134},
 }
 
 @ARTICLE{Cheng2020,
