--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -1,3 +1,13 @@
+@ARTICLE{Andrade2025,
+  AUTHOR = {Andrade, José R. C. and Kretschmar, Martin and Danylo, Rostyslav and Carlström, Stefanos and Witting, Tobias and Mermillod-Blondin, Alexandre and Patchkovskii, Serguei and Ivanov, Misha Yu and Vrakking, Marc J. J. and Rouzée, Arnaud and Nagy, Tamas},
+  URL = {http://dx.doi.org/10.1038/s41566-025-01770-6},
+  DATE = {2025-10},
+  DOI = {10.1038/s41566-025-01770-6},
+  FILE = {https://www.nature.com/articles/s41566-025-01770-6.pdf},
+  JOURNAL = {Nature Photonics},
+  TITLE = {Temporal Characterization of Tunable Few-Cycle Vacuum Ultraviolet Pulses},
+}
+
 @ARTICLE{Bertolino2022,
   AUTHOR = {Bertolino, Mattias and Carlström, Stefanos and Peschel, Jasper and Zapata, Felipe and Lindroth, Eva and Dahlström, Jan Marcus},
   DATE = {2022-10-14},
@@ -124,7 +134,7 @@
 @ARTICLE{Carlstroem2025,
   AUTHOR = {Carlström, Stefanos and Tahouri, Rezvan and Papoulia, Asimina and Dahlström, Jan Marcus and Ivanov, Misha Yu and Smirnova, Olga and Patchkovskii, Serguei},
   URL = {http://dx.doi.org/10.1103/PhysRevLett.134.093202},
-  DATE = {2025},
+  DATE = {2025-03},
   DOI = {10.1103/physrevlett.134.093202},
   EPRINT = {2306.15665},
   EPRINTCLASS = {physics.atom-ph},
