Added conference images

--- a/content/conferences/2012 EGAS44.md
+++ b/content/conferences/2012 EGAS44.md
@@ -5,4 +5,5 @@ date = 2012-07-09
 location = "Gothenburg, Sweden"
 enddate = 2012-07-13
 url = "https://www.eps-egas.org/130-egas-44.html"
+image = "2012-gothenburg.jpg"
 +++
