--- a/content/conferences/2014 EGAS46.md
+++ b/content/conferences/2014 EGAS46.md
@@ -6,4 +6,5 @@ location = "Lille, France"
 enddate = 2014-07-04
 url = "https://www.eps-egas.org/250-egas-46.html"
 poster = "Quantum State Preparation and Holography"
+image = "2014-lille.jpg"
 +++
