Zhang (2025) PRL published!

--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -345,3 +345,15 @@
   VOLUME = {116},
 }
 
+@ARTICLE{Zhang2025,
+  AUTHOR = {Zhang, Linxuan and Carlström, Stefanos and Smirnova, Olga and Ivanov, Misha and Ye, Difa},
+  URL = {http://dx.doi.org/10.1103/9f8y-td77},
+  DATE = {2025-11},
+  DOI = {10.1103/9f8y-td77},
+  JOURNAL = {Physical Review Letters},
+  NUMBER = {19},
+  PAGES = {193201},
+  TITLE = {Spin Polarization in Strong-Field Ionization As Sensor of Trapped Electron Orbits},
+  VOLUME = {135},
+}
+
