--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -160,6 +160,15 @@
   VOLUME = {117},
 }
 
+@ONLINE{Flores2025,
+  AUTHOR = {Flores, Philip Caesar M. and Carlström, Stefanos and Patchkovskii, Serguei and Ivanov, Misha and Mujica, Vladimiro and Ordonez, Andres F. and Smirnova, Olga},
+  DATE = {2025},
+  EPRINT = {2505.22433v4},
+  EPRINTCLASS = {cond-mat.mes-hall},
+  EPRINTTYPE = {arXiv},
+  TITLE = {{Enantiosensitive locking of photoelectron spin and cation orientation}},
+}
+
 @ARTICLE{Guo2018,
   AUTHOR = {Guo, Chen and Harth, Anne and Carlström, Stefanos and Cheng, Yu-Chen and Mikaelsson, Sara and Mårsell, Erik and Heyl, Christoph and Miranda, Miguel and Gisselbrecht, Mathieu and Gaarde, Mette B and Schafer, Kenneth Joseph and Mikkelsen, Anders and Mauritsson, Johan and Arnold, Cord Louis and L'Huillier, Anne},
   PUBLISHER = {IOP Publishing},
@@ -305,6 +314,15 @@
   PAGES = {095002},
   TITLE = {Phase metrology with multi-cycle two-colour pulses},
   VOLUME = {49},
+}
+
+@ONLINE{Rivera-Dean2025,
+  AUTHOR = {Rivera-Dean, Javier and Kanti, Deeksha and Stammer, Philipp and Carlström, Stefanos and Tsatrafyllis, Nikolaos and Ivanov, Misha Yu and Lewenstein, Maciej and Tzallas, Paraskevas},
+  DATE = {2025},
+  EPRINT = {2509.19608v3},
+  EPRINTCLASS = {quant-ph},
+  EPRINTTYPE = {arXiv},
+  TITLE = {{Propagation of intense squeezed vacuum light in non-linear media}},
 }
 
 @ARTICLE{Tahouri2024,
