--- a/bibliography/papers.tex
+++ b/bibliography/papers.tex
@@ -16,7 +16,11 @@ style=numeric,
 
 \maketitle
 
+Peer-reviewed:
 \cite{Lorek2014RoSI,Petersson2016,Heyl2014,Larsen2016,Carlstroem2016,Carlstroem2018,Carlstroem2016a,Guo2018,Carlstroem2022tdcisI,Carlstroem2022tdcisII,Carlstroem2022coherence,Weissenbilder2022,Nandi2022,Wikmark2019,Olofsson2021,Heyl2022,Cheng2020,Bertolino2022,Carlstroem2023linspinpol,Nandi2024,Nie2024,Tahouri2024,Carlstroem2025,Andrade2025,Zhang2025}
+
+Preprints:
+\cite{Rivera-Dean2025,Flores2025}
 
 \printbibliography
 
