Updated compass preprint

--- a/bibliography/papers.bib
+++ b/bibliography/papers.bib
@@ -163,10 +163,10 @@
 @ONLINE{Flores2025,
   AUTHOR = {Flores, Philip Caesar M. and Carlström, Stefanos and Patchkovskii, Serguei and Ivanov, Misha and Mujica, Vladimiro and Ordonez, Andres F. and Smirnova, Olga},
   DATE = {2025},
-  EPRINT = {2505.22433v4},
+  EPRINT = {2505.22433},
   EPRINTCLASS = {cond-mat.mes-hall},
   EPRINTTYPE = {arXiv},
-  TITLE = {{Enantiosensitive locking of photoelectron spin and cation orientation}},
+  TITLE = {{Enantiosensitive molecular compass}},
 }
 
 @ARTICLE{Guo2018,
